
PROJECT(CommonCore)


#ADD_DEFINITIONS(-DOSG4WEB_UTILITIES_LIBRARY_STATIC)

SET(DIRS Visitors Manipulators SceneHandlers)

SET("${PROJECT_NAME}_include" ${CMAKE_CURRENT_SOURCE_DIR}/include)

FOREACH(myvar include src)
	SET("${PROJECT_NAME}_${myvar}" ${OSG4WEB_ROOT}/${myvar}/${PROJECT_NAME})
	GRAB_FILES_FOLDERS("${PROJECT_NAME}_${myvar}" "${DIRS}")
ENDFOREACH(myvar)

ADD_LIBRARY(${PROJECT_NAME}
    STATIC
    ${${PROJECT_NAME}_include_FILES}
    ${${PROJECT_NAME}_src_FILES}
)

INCLUDE_DIRECTORIES( ${OSG_INCLUDE_DIR} ${${PROJECT_NAME}_include} )


SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PROJECT_LABEL "Library_${PROJECT_NAME}")

LINK_WITH_VARIABLES(${PROJECT_NAME} OSG_LIBRARY OSGUTIL_LIBRARY OSGDB_LIBRARY OSGGA_LIBRARY OSGFX_LIBRARY OSGTEXT_LIBRARY OSGMANIPULATOR_LIBRARY OSGVIEWER_LIBRARY OPENTHREADS_LIBRARY)


